bookinfo-mysql-multiple-ns/ossm/front/vs-front.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo-custom
spec:
  hosts:
  - bookinfo-custom.$EXTERNAL_DOMAIN
  gateways:
  - istio-system/ingress-gateway
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage-custom.front.svc.cluster.local
        port:
          number: 9080
        subset: v1
